# musigate

./: .env.example  .gitignore  LICENSE  README.md  music163bot_download_端到端证据报告.md  music163bot_测试原始数据报告.md  musigate_命令映射系统方案.md  musigate_实现报告.md  pyproject.toml
bots/: music163.yaml  music_v1.yaml
skills/add-bot-adapter/: SKILL.md
skills/add-bot-adapter/agents/: openai.yaml
skills/add-bot-adapter/references/: adapter-workflow.md
skills/musigate-cli/: SKILL.md
skills/musigate-cli/agents/: openai.yaml
skills/musigate-cli/references/: commands.md
src/musigate/: cli.py
src/musigate/adapters/: loader.py
src/musigate/gateway/: engine.py  executor.py  selector.py
src/musigate/resources/: __init__.py
src/musigate/resources/bots/: music163.yaml  music_v1.yaml
src/musigate/resources/config/: settings.yaml
src/musigate/telegram/: auth.py  client.py  listener.py
src/musigate/utils/: config.py  downloader.py  helper.py
tests/: test_cli.py  test_config.py  test_downloader.py  test_engine.py  test_listener.py  test_loader.py  test_package_metadata.py  test_selector.py  test_telegram_client.py
