[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musigate"
dynamic = ["version"]
description = "YAML-driven Telegram Bot orchestration engine for automated interactions"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "musigate contributors" }
]
requires-python = ">=3.10"
keywords = [
    "telegram",
    "telegram-bot",
    "music-download",
    "yaml",
    "cli",
    "bot-automation",
    "orchestration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]
dependencies = [
    "telethon>=1.33.0",
    "PySocks>=1.7.1",
    "typer>=0.9.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3"
]

[project.urls]
Homepage = "https://github.com/opxqo/musigate"
Repository = "https://github.com/opxqo/musigate"
Issues = "https://github.com/opxqo/musigate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2"
]

[project.scripts]
musigate = "musigate.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "musigate.__version__" }

[tool.setuptools.package-data]
"musigate.resources" = ["bots/*.yaml", "config/*.yaml"]
